--- a/src/css/mike.css
+++ b/src/css/mike.css
@@ -1,11 +1,23 @@
+body {
+  font-size: 12px;
+}
+
+.container-fluid {
+  padding-left: 0px;
+}
+
+.container-0padding {
+  padding-left: 0px
+}
+
 .active-row {
   background-color: navy;
   display:table-cell
 }
 
 .myrow {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 12px;
+  font-family: Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 11px;
   color: white;
   background-color:black;
   border-bottom-style: solid;
@@ -21,4 +33,12 @@
 
 .changed {
   background-color: green;
+}
+
+.public_fixedDataTable_main {
+  width: 1100px
+}
+
+.public_fixedDataTableCell_cellContent {
+  padding: 7px
 }
