WIP: Port popup.

--- a/src/css/mike.css
+++ b/src/css/mike.css
@@ -42,3 +42,10 @@ body {
 .public_fixedDataTableCell_cellContent {
   padding: 7px
 }
+
+.modal-container {
+  position: relative;
+}
+.modal-container .modal, .modal-container .modal-backdrop {
+  position: absolute;
+}
